test/ui/test/metadata/unterminated-text.stderr
error: unterminated text literal
 --> ${TEST_FOLDER}/metadata/unterminated-text.metadata:2:12
  |
2 |       where: "the long
 ... ____________^
4 | | }
  | |_^
  |

error: aborting due to previous error

